--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,7 @@
-version: '3.8'
-
 services:
   # Database (PostgreSQL)
   db:
-    image: postgres:15
+    image: postgres:15.6-alpine
     ports:
       - "5444:5432"
     env_file:
@@ -33,8 +31,6 @@ services:
       - .env
     environment:
       - DATABASE_URL=postgresql://${DB_USER}:${DB_PASS}@db:5432/${DB_NAME}
-      - API_HOST=${API_HOST}
-      - API_PORT=${API_PORT}
     depends_on:
       db:
         condition: service_healthy
