--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
+version: '3.8'
+
 services:
   # Database (PostgreSQL)
   db:
-    image: postgres:15.6-alpine
+    image: postgres:15-alpine
     ports:
-      - "5444:5432"
-    env_file:
-      - .env
+      - "${DB_PORT}:5432"
     environment:
       - POSTGRES_USER=${DB_USER}
       - POSTGRES_PASSWORD=${DB_PASS}
@@ -18,13 +18,12 @@ services:
       timeout: 5s
       retries: 5
     networks:
-      - iot-network
+      - backend-network
+    restart: unless-stopped
 
   # Ứng dụng chính (FastAPI)
   app:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    build: .
     ports:
       - "8000:8000"
     env_file:
@@ -35,13 +34,13 @@ services:
       db:
         condition: service_healthy
     networks:
-      - iot-network
-    mem_limit: 512m
-    cpus: 1.0
+      - backend-network
+    restart: unless-stopped
 
 networks:
-  iot-network:
+  backend-network:
     driver: bridge
 
 volumes:
-  postgres_data: 
+  postgres_data:
+    driver: local 
